Fix footer contrast

--- a/src/views/01UMN_INST-TWINCITIES/components/footer/umn-footer.scss
+++ b/src/views/01UMN_INST-TWINCITIES/components/footer/umn-footer.scss
@@ -4,6 +4,15 @@ umn-footer {
       width: 20em;
       margin-left: auto;
       margin-right: auto;
+
+      a {
+        color: $darkerGrey;
+        &:hover,
+        &:focus {
+          box-shadow: none;
+          text-decoration: underline;
+        }
+      }
     }
 
     .umn-chat {
